Created test.py for inference pipeline. Modified dataset.py to output field id info and boundary mask.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore the data and checkpoints... way too much to store on Git
 dataset/*
 checkpoints/*
+labels/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
