--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/opt/anaconda3/envs/agcompvis/bin/python"
+    "python.pythonPath": "/opt/anaconda3/envs/agcompvis/bin/python",
+    "git.ignoreLimitWarning": true
 }
