--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ dataset/*
 checkpoints/*
 labels/*
 
+# Ignore MacOS files
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
